Cambio de formato de portada

--- a/cubierta.tex
+++ b/cubierta.tex
@@ -1,19 +1,11 @@
-% Rellenar con la informacion personal y del trabajo
+\titulo{Modelo de Representación y Construcción de Sistemas de Recomendación para Interacciones de la Web 2.0}
 
-\titulo{Desarrollo de estrategias de planificaci\'on para motores de b\'usqueda verticales}
+\autor{Rodrigo de Jesús Vásquez Fernández}
 
-\autor{Danilo Fernando Bustos P\'erez}
-\email{danilo.bustos@usach.cl}
-\telefono{+569 5709 1011}
-\run{17.514.716-0}
-\annoingreso{2013}
+\fecha{Lunes}{15}{Enero}{2013} %Del Examen de Grado
 
-\fecha{Lunes}{1}{Diciembre}{2014}
-
-\profesorguia{Dr.\ Pepito Uno}
-\profesorcoguia{Dr.\ Pepito Dos}
+\profesorguia{Dr.\ Edmundo Pablo Leiva Lobos}
 
 \ciudad{Santiago}
 \pais{Chile}
-
 \makecubierta
