Removed some chapters and ready to start to write

--- a/cubierta.tex
+++ b/cubierta.tex
@@ -1,10 +1,10 @@
-\titulo{Modelo de Representación y Construcción de Sistemas de Recomendación para Interacciones de la Web 2.0}
+\titulo{Estrategias de planificación...}
 
-\autor{Rodrigo de Jesús Vásquez Fernández}
+\autor{Danilo Fernando Bustos Pérez}
 
-\fecha{Lunes}{15}{Enero}{2013} %Del Examen de Grado
+\fecha{Lunes}{00}{Enero}{0000} %Del Examen de Grado
 
-\profesorguia{Dr.\ Edmundo Pablo Leiva Lobos}
+\profesorguia{Dr.\ Carolina Bonacic Castro}
 
 \ciudad{Santiago}
 \pais{Chile}
