Marco teórico: Motores de búsqueda verticales

--- a/cubierta.tex
+++ b/cubierta.tex
@@ -1,10 +1,10 @@
-\titulo{Estrategias de planificación...}
+\titulo{Modelo de Representación y Construcción de Sistemas de Recomendación para Interacciones de la Web 2.0}
 
-\autor{Danilo Fernando Bustos Pérez}
+\autor{Rodrigo de Jesús Vásquez Fernández}
 
-\fecha{Lunes}{00}{Enero}{0000} %Del Examen de Grado
+\fecha{Lunes}{15}{Enero}{2013} %Del Examen de Grado
 
-\profesorguia{Dr.\ Carolina Bonacic Castro}
+\profesorguia{Dr.\ Edmundo Pablo Leiva Lobos}
 
 \ciudad{Santiago}
 \pais{Chile}
