--- a/tesis-postgrado.tex
+++ b/tesis-postgrado.tex
@@ -69,6 +69,10 @@
 \hyphenation{de-di-ca-da a-no-ta-cio-nes re-sul-ta-dos fun-cio-na-les se-man-ti-ca}
 \include{chapters/1-intro}
 \include{chapters/2-marco-teorico}
+\include{chapters/3-modelo}
+\include{chapters/4-diseno}
+\include{chapters/5-casos}
+\include{chapters/6-conclusiones}
 % ----------------------------------------------------------
 \bibliographystyle{apa-good}
 \bibliography{referencias}
