Cubierta y comando para profesor go-guia agregado

--- a/cubierta.tex
+++ b/cubierta.tex
@@ -1,10 +1,12 @@
-\titulo{Modelo de Representación y Construcción de Sistemas de Recomendación para Interacciones de la Web 2.0}
+\titulo{Estrategias de planificación para motores de búsqueda verticales}
 
-\autor{Rodrigo de Jesús Vásquez Fernández}
+\autor{Danilo Fernando Bustos Pérez}
 
 \fecha{Lunes}{15}{Enero}{2013} %Del Examen de Grado
 
-\profesorguia{Dr.\ Edmundo Pablo Leiva Lobos}
+\profesorguia{Dra.\ Carolina Bonacic Castro}
+
+\profesorcoguia{Dr.\ Mauricio Marín Caihuán}
 
 \ciudad{Santiago}
 \pais{Chile}
