--- a/referencias.bib
+++ b/referencias.bib
@@ -18,6 +18,28 @@
   Url                      = { http://dpavez.cl/techreport }
 }
 
+@InProceedings{Broder:2003,
+  Title                    = {Efficient Query Evaluation Using a Two-level Retrieval Process},
+  Author                   = {Broder, Andrei Z. and Carmel, David and Herscovici, Michael and Soffer, Aya and Zien, Jason},
+  Booktitle                = {Proceedings of the Twelfth International Conference on Information and Knowledge Management},
+  Year                     = {2003},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {426--434},
+  Publisher                = {ACM},
+  Series                   = {CIKM '03},
+
+  Acmid                    = {956944},
+  Doi                      = {10.1145/956863.956944},
+  ISBN                     = {1-58113-723-0},
+  Keywords                 = {WAND, document-at-a-time, efficient query evaluation},
+  Location                 = {New Orleans, LA, USA},
+  Numpages                 = {9},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.10.02},
+  Url                      = {http://doi.acm.org/10.1145/956863.956944}
+}
+
 @Book{Libro:2013,
   Title                    = { {T{\'i}tulo Libro} },
   Author                   = { Daniel Pavez, Tildes As{\'i} },
