Marco teorico v1 done

--- a/referencias.bib
+++ b/referencias.bib
@@ -130,6 +130,29 @@
   Url                      = { http://dpavez.cl/articulo }
 }
 
+@Article{Zobel:2006,
+  Title                    = {Inverted Files for Text Search Engines},
+  Author                   = {Zobel, Justin and Moffat, Alistair},
+  Journal                  = {ACM Comput. Surv.},
+  Year                     = {2006},
+
+  Month                    = jul,
+  Number                   = {2},
+  Volume                   = {38},
+
+  Acmid                    = {1132959},
+  Address                  = {New York, NY, USA},
+  Articleno                = {6},
+  Doi                      = {10.1145/1132956.1132959},
+  ISSN                     = {0360-0300},
+  Issue_date               = {2006},
+  Keywords                 = {Inverted file indexing, Web search engine, document database, information retrieval, text retrieval},
+  Owner                    = {danilobustos},
+  Publisher                = {ACM},
+  Timestamp                = {2014.10.23},
+  Url                      = {http://doi.acm.org/10.1145/1132956.1132959}
+}
+
 @Proceedings{proceedings:2013,
   Title                    = { {T{\'i}tulo del Proceeding} },
   Year                     = { 1987 },
