capitulo 3 - prediction time introduccion

--- a/referencias.bib
+++ b/referencias.bib
@@ -115,6 +115,28 @@
   Url                      = {http://doi.acm.org/10.1145/956863.956944}
 }
 
+@InProceedings{Cronen-Townsend:2002,
+  Title                    = {Predicting Query Performance},
+  Author                   = {Cronen-Townsend, Steve and Zhou, Yun and Croft, W. Bruce},
+  Booktitle                = {Proceedings of the 25th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  Year                     = {2002},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {299--306},
+  Publisher                = {ACM},
+  Series                   = {SIGIR '02},
+
+  Acmid                    = {564429},
+  Doi                      = {10.1145/564376.564429},
+  ISBN                     = {1-58113-561-0},
+  Keywords                 = {ambiguity, clarity, information theory, language models},
+  Location                 = {Tampere, Finland},
+  Numpages                 = {8},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.03},
+  Url                      = {http://doi.acm.org/10.1145/564376.564429}
+}
+
 @Book{Libro:2013,
   Title                    = {{T{\'i}tulo Libro}},
   Author                   = { Daniel Pavez, Tildes As{\'i} },
@@ -258,6 +280,25 @@
   Url                      = { http://dpavez.cl/incollection }
 }
 
+@InCollection{He:2004,
+  Title                    = {Inferring Query Performance Using Pre-retrieval Predictors},
+  Author                   = {He, Ben and Ounis, Iadh},
+  Booktitle                = {String Processing and Information Retrieval},
+  Publisher                = {Springer Berlin Heidelberg},
+  Year                     = {2004},
+  Editor                   = {Apostolico, Alberto and Melucci, Massimo},
+  Pages                    = {43-54},
+  Series                   = {Lecture Notes in Computer Science},
+  Volume                   = {3246},
+
+  Doi                      = {10.1007/978-3-540-30213-1_5},
+  ISBN                     = {978-3-540-23210-0},
+  Language                 = {English},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.03},
+  Url                      = {http://dx.doi.org/10.1007/978-3-540-30213-1_5}
+}
+
 @InProceedings{Macdonald:2012,
   Title                    = {Learning to Predict Response Times for Online Query Scheduling},
   Author                   = {Macdonald, Craig and Tonellotto, Nicola and Ounis, Iadh},
@@ -332,6 +373,28 @@
   Volume                   = { 1 },
 
   Url                      = { http://dpavez.cl/articulo }
+}
+
+@InProceedings{Si:2002,
+  Title                    = {Using Sampled Data and Regression to Merge Search Engine Results},
+  Author                   = {Si, Luo and Callan, Jamie},
+  Booktitle                = {Proceedings of the 25th Annual International ACM SIGIR Conference on Research and Development in Information Retrieval},
+  Year                     = {2002},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {19--26},
+  Publisher                = {ACM},
+  Series                   = {SIGIR '02},
+
+  Acmid                    = {564382},
+  Doi                      = {10.1145/564376.564382},
+  ISBN                     = {1-58113-561-0},
+  Keywords                 = {distributed information retrieval, regression, results merging},
+  Location                 = {Tampere, Finland},
+  Numpages                 = {8},
+  Owner                    = {danilobustos},
+  Timestamp                = {2014.11.03},
+  Url                      = {http://doi.acm.org/10.1145/564376.564382}
 }
 
 @InProceedings{Tonellotto:2011,
