Cambios en margenes oneside a twoside

--- a/tesis-postgrado.cls
+++ b/tesis-postgrado.cls
@@ -15,7 +15,7 @@
 
 \ProcessOptions\relax
 
-\LoadClass[oneside,12pt,letterpaper]{book}
+\LoadClass[twoside,12pt,letterpaper]{book}
 
 %SUPLEMENTARIOS----------------------------------------------------------------
 \RequirePackage[spanish]{babel}
